--- a/renovate.json
+++ b/renovate.json
@@ -74,7 +74,7 @@
             "matchPackageNames": [
                 "/^docker\\.io\\/.+/"
             ],
-            "groupName": "charts/{{{ replace \"charts/\" \"\" parentDir }}} dependencies",
+            "groupName": "charts/{{{ replace \"/samples\" \"\" (replace \"charts/\" \"\" parentDir) }}} dependencies",
             "labels": [
                 "dependencies",
                 "renovate"
@@ -88,7 +88,7 @@
                 "regex"
             ],
             "versioning": "docker",
-            "groupName": "charts/{{{ replace \"charts/\" \"\" parentDir }}} dependencies",
+            "groupName": "charts/{{{ replace \"/samples\" \"\" (replace \"charts/\" \"\" parentDir) }}} dependencies",
             "labels": [
                 "dependencies",
                 "renovate"
