changed: wordpress - update version to 0.4.4 fixed: wordpress - removed image digest from deployment manifests

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.4.3
+version: 0.4.4
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,21 +26,8 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: changed
-      description: "Update docker.io/mariadb to 5b6a1ea"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/53
-    - kind: changed
-      description: "Update docker.io/memcached to edbe8e8"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/53
-    - kind: changed
-      description: "Update lusotycoon/apache-exporter to v1.0.11"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/53
+    - kind: fixed
+      description: "removed the digest from deployment manifests to use it directly from the tag"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wordpress
