changed: wireguard - removed .digest values from image definitions for CI pipeline compatibility. Use image tags with digests instead

--- a/charts/wireguard/templates/deployment.yaml
+++ b/charts/wireguard/templates/deployment.yaml
@@ -87,7 +87,7 @@ spec:
             runAsNonRoot: false 
             runAsUser: 0
           {{ end }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}{{ if .Values.image.digest }}@{{ .Values.image.digest }}{{ end }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             {{- if .Values.wireguard.PUID }}
