--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
-version: 0.1.22
+version: 0.2.0
 appVersion: 1.0.20250521-r0-ls90
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
@@ -23,14 +23,11 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: changed
-      description: "chore(deps): update linuxserver/wireguard docker tag to v1.0.20250521-r0-ls90"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/37
+      description: "refactor: removed .digest values from image definitions for CI pipeline compatibility. Use image tags with digests instead."
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
-      image: docker.io/linuxserver/wireguard:1.0.20250521-r0-ls88
+      image: docker.io/linuxserver/wireguard:1.0.20250521-r0-ls90
 keywords:
   - wireguard
   - vpn
