wireguard better samples and readme

--- a/charts/wireguard/samples/clientFullConfig.client.values.yaml
+++ b/charts/wireguard/samples/clientFullConfig.client.values.yaml
@@ -1,8 +1,8 @@
 wireguard:
   timezone: "Europe/Berlin"
+  existingSecret: "wg-config"
   client:
     enabled: true
     config:
-      existingSecret: "client-secret"
       persistentKeepalive: 25
       endpoint: "vpn.example.com:51820"
