--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.4.7
+version: 0.5.0
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,12 +26,10 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
+    - kind: added
+      description: "Add theme installation support with batch operations and ZIP URL support"
     - kind: changed
-      description: "Update memcached to v0.5.0"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/60
-  artifacthub.io/containsSecurityUpdates: false
+      description: "Optimize plugin/theme installation performance with batch operations"
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.8.3-php8.1-apache
