--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -132,6 +132,7 @@ data:
     else
         echo "WordPress already present in /tmp/wordpress - skipping copy"
     fi
+    echo "Base script completed!"
   init.sh: |
     #!/bin/bash
     echo "Starting init script..."
@@ -222,6 +223,10 @@ data:
     # Handle WordPress users if specified
     {{- if .Values.wordpress.users }}
     echo "Creating custom users..."
+    
+    # Get all existing users once (performance boost!)
+    EXISTING_USERS=$(wp user list --field=user_login 2>/dev/null || echo "")
+    
     {{- range .Values.wordpress.users }}
     USER_USERNAME="{{ .username }}"
     USER_EMAIL="{{ .email }}"
@@ -231,8 +236,8 @@ data:
     USER_ROLE="{{ .role }}"
     USER_SENDEMAIL="{{ .sendEmail }}"
 
-    # Check if user already exists
-    if ! run wp user get "${USER_USERNAME}"; then
+    # Check if user already exists (using cached list)
+    if ! echo "$EXISTING_USERS" | grep -q "^${USER_USERNAME}$"; then
       echo "Creating user ${USER_USERNAME}..."
       run wp user create "${USER_USERNAME}" "${USER_EMAIL}" \
         --role="${USER_ROLE}" \
@@ -251,33 +256,49 @@ data:
 
 
 
+    # Get all installed plugins once at the start (HUGE performance boost!)
+    # This prevents 17+ separate wp-cli calls that each take 4-8 seconds
+    INSTALLED_PLUGINS=$(wp plugin list --field=name 2>/dev/null || echo "")
+    ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
+    # Get plugins with auto-update enabled (check update_version field to detect auto-update status)
+    AUTOUPDATE_ENABLED=$(wp plugin list --fields=name,auto_update --format=csv 2>/dev/null | grep ",on$" | cut -d',' -f1 || echo "")
+
     # Handle WordPress metrics plugin if specified
     if [ ! -z "${WORDPRESS_METRICS}" ]; then
-      # Check if plugin is installed
-      if run wp plugin is-installed ${WORDPRESS_METRICS}; then
-        if ! run wp plugin is-active ${WORDPRESS_METRICS}; then
+      # Check if plugin is installed (using cached list)
+      if echo "$INSTALLED_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
+        # Check if active (using cached list)
+        if ! echo "$ACTIVE_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
           run wp plugin activate ${WORDPRESS_METRICS}
+          ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
         fi
       else
         echo "Installing WordPress metrics plugin..."
         wp plugin install ${WORDPRESS_METRICS} --activate --force
+        # Refresh cached lists after install
+        INSTALLED_PLUGINS=$(wp plugin list --field=name 2>/dev/null || echo "")
+        ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
       fi
 
-      # Enable auto-updates if disabled
-      AUTO_UPDATE_STATUS=$(wp plugin auto-updates status ${WORDPRESS_METRICS} --field=status 2>/dev/null)
-      if [ "$AUTO_UPDATE_STATUS" = "disabled" ]; then
+      # Enable auto-updates if disabled (using cached list)
+      if ! echo "$AUTOUPDATE_ENABLED" | grep -q "^${WORDPRESS_METRICS}$"; then
         run wp plugin auto-updates enable ${WORDPRESS_METRICS}
+        AUTOUPDATE_ENABLED=$(wp plugin list --fields=name,auto_update --format=csv 2>/dev/null | grep ",on$" | cut -d',' -f1 || echo "")
       fi
     else
       # Remove plugin if WORDPRESS_METRICS is empty
-      if run wp plugin is-installed ${WORDPRESS_METRICS}; then
+      if echo "$INSTALLED_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
         wp plugin delete ${WORDPRESS_METRICS}
+        INSTALLED_PLUGINS=$(wp plugin list --field=name 2>/dev/null || echo "")
       fi
     fi
 
     # Handle WordPress plugins if specified
     {{- if .Values.wordpress.plugins }}
     echo "Installing custom plugins..."
+    
+    # Use cached plugin lists from above (no need to fetch again!)
+
     
     # Prepare arrays for batch operations
     PLUGINS_TO_INSTALL=()
@@ -290,8 +311,8 @@ data:
     PLUGIN_ACTIVATE="{{ .activate }}"
     PLUGIN_AUTOUPDATE="{{ .autoupdate }}"
 
-    # Check if plugin needs installation
-    if ! run wp plugin is-installed "${PLUGIN_NAME}"; then
+    # Check if plugin needs installation (using grep on cached list)
+    if ! echo "$INSTALLED_PLUGINS" | grep -q "^${PLUGIN_NAME}$"; then
       if [ -n "${PLUGIN_VERSION}" ]; then
         PLUGINS_TO_INSTALL+=("${PLUGIN_NAME}:${PLUGIN_VERSION}")
       else
@@ -337,13 +358,18 @@ data:
         PLUGIN_VERSION="${plugin_spec##*:}"
         wp plugin install "${PLUGIN_NAME}" --version="${PLUGIN_VERSION}" --force
       done
+      
+      # Refresh plugin lists after installation
+      INSTALLED_PLUGINS=$(wp plugin list --field=name 2>/dev/null || echo "")
+      ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
     fi
 
     # Batch activate plugins
     if [ ${#PLUGINS_TO_ACTIVATE[@]} -gt 0 ]; then
       PLUGINS_NEED_ACTIVATION=()
       for plugin in "${PLUGINS_TO_ACTIVATE[@]}"; do
-        if ! run wp plugin is-active "$plugin"; then
+        # Check against cached active plugins list
+        if ! echo "$ACTIVE_PLUGINS" | grep -q "^${plugin}$"; then
           PLUGINS_NEED_ACTIVATION+=("$plugin")
         fi
       done
@@ -351,6 +377,8 @@ data:
       if [ ${#PLUGINS_NEED_ACTIVATION[@]} -gt 0 ]; then
         echo "Activating ${#PLUGINS_NEED_ACTIVATION[@]} plugin(s)..."
         run wp plugin activate "${PLUGINS_NEED_ACTIVATION[@]}"
+        # Refresh active plugins list after activation
+        ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
       fi
     fi
 
@@ -358,8 +386,8 @@ data:
     if [ ${#PLUGINS_TO_AUTOUPDATE[@]} -gt 0 ]; then
       PLUGINS_NEED_AUTOUPDATE=()
       for plugin in "${PLUGINS_TO_AUTOUPDATE[@]}"; do
-        AUTO_UPDATE_STATUS=$(wp plugin auto-updates status "$plugin" --field=status 2>/dev/null)
-        if [ "$AUTO_UPDATE_STATUS" = "disabled" ]; then
+        # Check against cached auto-update list
+        if ! echo "$AUTOUPDATE_ENABLED" | grep -q "^${plugin}$"; then
           PLUGINS_NEED_AUTOUPDATE+=("$plugin")
         fi
       done
@@ -376,6 +404,12 @@ data:
     # Handle WordPress themes if specified
     {{- if .Values.wordpress.themes }}
     echo "Installing custom themes..."
+    
+    # Get all installed themes once (performance boost!)
+    INSTALLED_THEMES=$(wp theme list --field=name 2>/dev/null || echo "")
+    ACTIVE_THEME=$(wp theme list --status=active --field=name 2>/dev/null || echo "")
+    # Get themes with auto-update enabled (check auto_update field)
+    AUTOUPDATE_ENABLED_THEMES=$(wp theme list --fields=name,auto_update --format=csv 2>/dev/null | grep ",on$" | cut -d',' -f1 || echo "")
     
     # Helper function to extract theme slug from name/URL
     get_theme_slug() {
@@ -400,8 +434,8 @@ data:
     
     THEME_SLUG=$(get_theme_slug "${THEME_NAME}")
 
-    # Check if theme needs installation
-    if ! run wp theme is-installed "${THEME_SLUG}"; then
+    # Check if theme needs installation (using grep on cached list)
+    if ! echo "$INSTALLED_THEMES" | grep -q "^${THEME_SLUG}$"; then
       if [ -n "${THEME_VERSION}" ]; then
         THEMES_TO_INSTALL+=("${THEME_NAME}:${THEME_VERSION}")
       else
@@ -423,29 +457,57 @@ data:
     # Batch install themes
     if [ ${#THEMES_TO_INSTALL[@]} -gt 0 ]; then
       echo "Installing ${#THEMES_TO_INSTALL[@]} theme(s)..."
+      
+      # Separate themes by type: URLs, versioned, and simple names
+      THEMES_SIMPLE=()
+      THEMES_URLS=()
+      THEMES_WITH_VERSION=()
+      
       for theme_spec in "${THEMES_TO_INSTALL[@]}"; do
-        # Check if it's a URL or a versioned theme
-        # URLs start with http:// or https://, so : doesn't mean version here
         if [[ "$theme_spec" == http://* ]] || [[ "$theme_spec" == https://* ]]; then
-          # It's a URL - install as-is
-          wp theme install "$theme_spec" --force
+          # It's a URL - needs individual install
+          THEMES_URLS+=("$theme_spec")
         elif [[ "$theme_spec" == *":"* ]]; then
           # Has version specified (not a URL)
-          THEME_NAME="${theme_spec%%:*}"
-          THEME_VERSION="${theme_spec##*:}"
-          wp theme install "${THEME_NAME}" --version="${THEME_VERSION}" --force
+          THEMES_WITH_VERSION+=("$theme_spec")
         else
-          # No version, not a URL - install directly
-          wp theme install "$theme_spec" --force
+          # Simple theme name - can be batched!
+          THEMES_SIMPLE+=("$theme_spec")
         fi
       done
+      
+      # Batch install all simple themes at once (HUGE speedup!)
+      if [ ${#THEMES_SIMPLE[@]} -gt 0 ]; then
+        echo "Batch installing ${#THEMES_SIMPLE[@]} theme(s)..."
+        wp theme install "${THEMES_SIMPLE[@]}" --force
+      fi
+      
+      # Install URL themes individually (wp-cli limitation)
+      for theme_url in "${THEMES_URLS[@]}"; do
+        echo "Installing theme from URL: $theme_url"
+        wp theme install "$theme_url" --force
+      done
+      
+      # Install versioned themes individually (wp-cli limitation)
+      for theme_spec in "${THEMES_WITH_VERSION[@]}"; do
+        THEME_NAME="${theme_spec%%:*}"
+        THEME_VERSION="${theme_spec##*:}"
+        echo "Installing theme ${THEME_NAME} version ${THEME_VERSION}..."
+        wp theme install "${THEME_NAME}" --version="${THEME_VERSION}" --force
+      done
+      
+      # Refresh theme lists after installation (only once!)
+      INSTALLED_THEMES=$(wp theme list --field=name 2>/dev/null || echo "")
+      ACTIVE_THEME=$(wp theme list --status=active --field=name 2>/dev/null || echo "")
     fi
 
     # Activate theme (only one can be active)
     if [ -n "$THEME_TO_ACTIVATE" ]; then
-      if ! run wp theme is-active "$THEME_TO_ACTIVATE"; then
+      # Check against cached active theme
+      if [ "$ACTIVE_THEME" != "$THEME_TO_ACTIVATE" ]; then
         echo "Activating theme: $THEME_TO_ACTIVATE"
         run wp theme activate "$THEME_TO_ACTIVATE"
+        ACTIVE_THEME="$THEME_TO_ACTIVATE"
       fi
     fi
 
@@ -453,8 +515,8 @@ data:
     if [ ${#THEMES_TO_AUTOUPDATE[@]} -gt 0 ]; then
       THEMES_NEED_AUTOUPDATE=()
       for theme in "${THEMES_TO_AUTOUPDATE[@]}"; do
-        AUTO_UPDATE_STATUS=$(wp theme auto-updates status "$theme" --field=status 2>/dev/null)
-        if [ "$AUTO_UPDATE_STATUS" = "disabled" ]; then
+        # Check against cached auto-update list
+        if ! echo "$AUTOUPDATE_ENABLED_THEMES" | grep -q "^${theme}$"; then
           THEMES_NEED_AUTOUPDATE+=("$theme")
         fi
       done
