--- a/charts/wordpress/templates/servicemonitor.yaml
+++ b/charts/wordpress/templates/servicemonitor.yaml
@@ -35,6 +35,14 @@ spec:
     bearerTokenSecret:
       name: {{ if .Values.metrics.wordpress.serviceMonitor.existingSecret }}{{ .Values.metrics.wordpress.serviceMonitor.existingSecret }}{{ else }}{{ include "metrics.wordpress.fullname" . }}{{ end }}
       key: wordpress.metrics.token
+  - port: https
+    {{ if .Values.metrics.wordpress.serviceMonitor.interval }}
+    interval: {{ .Values.metrics.wordpress.serviceMonitor.interval }}
+    {{ end }}
+    path: {{ coalesce .Values.metrics.wordpress.serviceMonitor.metricsPath .Values.metrics.wordpress.serviceMonitor.path "/slymetrics/metrics" | quote }}
+    bearerTokenSecret:
+      name: {{ if .Values.metrics.wordpress.serviceMonitor.existingSecret }}{{ .Values.metrics.wordpress.serviceMonitor.existingSecret }}{{ else }}{{ include "metrics.wordpress.fullname" . }}{{ end }}
+      key: wordpress.metrics.token
 {{- end }}
 
 {{- if and .Values.metrics.apache.enabled .Values.metrics.apache.serviceMonitor.enabled }}
